공식 튜닝 가이드의 ZGC 번역을 추가하라